# 6502_LS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build.yml  deploy-docs.yml  formatting.yml  spell-check.yml  static-analysis.yml  test.yml
6502ls-algo/: CMakeLists.txt  README.md
6502ls-algo/include/: Node.h  Trie.h
6502ls-algo/src/: Trie.cpp
6502ls-capabilities/src/: ServerCapabilities.cpp
6502ls-config/src/: ConfigurationManager.cpp
6502ls-configuration-files/: config.xml
6502ls-core/: CMakeLists.txt  README.md
6502ls-core/include/6502ls/6502ls-core/: Ls6502Facade.h
6502ls-core/include/ls6502/core/: Ls6502Client.h  Ls6502Counter.h  Ls6502ErrorDirector.h  Ls6502ErrorHandler.h  Ls6502Facade.h  Ls6502ReqHandler.h  Ls6502Server.h
6502ls-core/src/: Ls6502Client.cpp  Ls6502Counter.cpp  Ls6502ErrorHandler.cpp  Ls6502Facade.cpp  Ls6502ReqHandler.cpp  Ls6502Server.cpp
6502ls-dao/instructions/: instructions.json
6502ls-definition/src/: FakeDefinitionProvider.cpp
6502ls-diagnostics/factory_src/: DiagnosticsProviderFactory.h
6502ls-diagnostics/test/: DiagnosticsProviderTest.cpp
6502ls-messages/src/: CodeActionResponse.cpp  CompletionRequest.cpp  DidChangeTextDocumentRequest.cpp  RequestMessage.cpp
6502ls-params/src/: DidChangeTextDocumentParams.cpp  (+1 more)
6502ls-test-files/: snake_in_6502_asm.txt
6502ls-tests/: Test.cpp
docs/: README.md
docs/latex/: annotated.tex  (+241 more)
instructions/: instructions.json
scripts/: format.sh
src/: 1  Main.cpp
test/: CMakeLists.txt
test_file/: snake_in_6502_asm.txt
(+1491 files in other folders)
